--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "internet-camera",
   "version": "0.1.0",
   "private": true,
+  "workspaces": [
+    "packages/*"
+  ],
   "scripts": {
     "chain": "cd packages/contracts && yarn chain",
     "website": "cd packages/website && yarn dev",
