--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -18,6 +18,7 @@
     "@ethersproject/units": "^5.4.0",
     "@internetcamera/contracts": "^0.0.3",
     "exifreader": "^3.16.0",
+    "graphql": "^15.5.1",
     "graphql-request": "^3.4.0",
     "isomorphic-fetch": "^3.0.0"
   },
