--- a/packages/contracts/package.json
+++ b/packages/contracts/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@internetcamera/contracts",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "main": "dist/typechain/index.js",
   "types": "dist/typechain/index.d.ts",
   "files": [
@@ -14,7 +14,7 @@
     "prepublishOnly": "yarn build",
     "test": "hardhat test",
     "compile": "hardhat clean && hardhat compile",
-    "typechain": "rm -rf ./typechain && typechain --show-stack-traces --target ethers-v5 --outDir ./typechain 'artifacts/!(build-info)/**/!(*.dbg*)*.json'",
+    "typechain": "rm -rf ./typechain && typechain --show-stack-traces --target ethers-v5 --out-dir ./typechain 'artifacts/!(build-info)/**/!(*.dbg*)*.json'",
     "build:contracts": "yarn compile && yarn typechain",
     "build:package": "rm -rf ./dist && tsc && cp typechain/*.d.ts dist/typechain && cp -R addresses dist && cp -R artifacts/contracts dist/artifacts && cp -R contracts dist",
     "chain": "ganache-cli -h 0.0.0.0 --networkId 50 --accounts 20 -e 10000000000 -l 10000000 -m 'nominee arrange pistol aim book head mind anxiety lobster system forest dose void marine eyebrow'"
@@ -22,10 +22,10 @@
   "devDependencies": {
     "@chainlink/contracts": "^0.1.7",
     "@nomiclabs/hardhat-ethers": "^2.0.2",
-    "@nomiclabs/hardhat-etherscan": "^2.1.2",
+    "@nomiclabs/hardhat-etherscan": "^2.1.3",
     "@nomiclabs/hardhat-waffle": "^2.0.1",
     "@openzeppelin/contracts": "^4.1.0",
-    "@typechain/ethers-v5": "^6.0.5",
+    "@typechain/ethers-v5": "^7.0.1",
     "@types/chai": "^4.2.17",
     "@types/chai-as-promised": "^7.1.3",
     "@types/mocha": "^8.2.2",
@@ -34,20 +34,21 @@
     "chai-as-promised": "^7.1.1",
     "dotenv": "^8.2.0",
     "ethereum-waffle": "^3.3.0",
-    "ethers": "^5.1.4",
+    "ethers": "^5.4.1",
     "ganache-cli": "^6.12.2",
-    "hardhat": "^2.2.1",
+    "hardhat": "^2.4.1",
     "hardhat-deploy": "^0.7.5",
     "hardhat-typechain": "^0.3.5",
     "minimist": "^1.2.5",
     "patch-package": "^6.4.7",
     "ts-node": "^9.1.1",
-    "typechain": "^4.0.3",
+    "typechain": "^5.1.1",
     "typescript": "^4.2.4"
   },
   "dependencies": {
     "@opengsn/contracts": "^2.2.2",
     "@opengsn/gsn": "^2.1.0",
+    "@typechain/hardhat": "^2.1.2",
     "fxportal": "https://github.com/fx-portal/contracts"
   }
 }
