--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@internetcamera/sdk",
-  "version": "0.0.9",
+  "version": "0.0.14",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
@@ -12,11 +12,15 @@
     "@ethersproject/abstract-signer": "^5.4.0",
     "@ethersproject/address": "^5.4.0",
     "@ethersproject/bignumber": "^5.4.0",
+    "@ethersproject/bytes": "^5.4.0",
     "@ethersproject/contracts": "^5.4.0",
+    "@ethersproject/keccak256": "^5.4.0",
     "@ethersproject/providers": "^5.4.0",
+    "@ethersproject/solidity": "^5.4.0",
+    "@ethersproject/strings": "^5.4.0",
     "@ethersproject/transactions": "^5.4.0",
     "@ethersproject/units": "^5.4.0",
-    "@internetcamera/contracts": "^0.0.3",
+    "@internetcamera/contracts": "^0.0.4",
     "exifreader": "^3.16.0",
     "graphql": "^15.5.1",
     "graphql-request": "^3.4.0",
@@ -27,13 +31,16 @@
     "@babel/preset-env": "^7.14.7",
     "@babel/preset-typescript": "^7.14.5",
     "@types/jest": "^26.0.23",
+    "@types/react": "^17.0.13",
     "babel-jest": "^27.0.5",
     "jest": "^27.0.5",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "swr": "^0.5.6",
     "ts-jest": "^27.0.3",
     "typescript": "^4.3.4"
   },
   "peerDependencies": {
-    "react": "^17.0.2",
     "swr": "^0.5.6"
   },
   "peerDependenciesMeta": {
