--- a/package.json
+++ b/package.json
@@ -2,13 +2,14 @@
   "name": "internet-camera",
   "version": "0.1.0",
   "private": true,
+  "workspaces": [
+    "packages/*"
+  ],
   "scripts": {
     "chain": "cd packages/contracts && yarn chain",
     "website": "cd packages/website && yarn dev",
-    "ipfs-node": "cd packages/ipfs-node && yarn dev"
-  },
-  "dependencies": {
-    "@ethersproject/strings": "^5.4.0",
-    "@walletconnect/web3-provider": "^1.4.1"
+    "sdk": "cd packages/sdk && yarn dev",
+    "ipfs-node": "cd packages/ipfs-node && yarn dev",
+    "tx": "cd packages/tx && yarn dev"
   }
 }
