--- a/packages/contracts/package.json
+++ b/packages/contracts/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@internetcamera/contracts",
-  "version": "0.0.4",
+  "version": "0.0.5",
   "main": "dist/typechain/index.js",
   "types": "dist/typechain/index.d.ts",
   "files": [
@@ -8,7 +8,7 @@
     ".dist/*"
   ],
   "scripts": {
-    "deploy-local": "ts-node scripts/deploy.ts --chainId 50 && cp -R addresses dist",
+    "deploy-local": "ts-node scripts/deploy.ts --chainId 1337 && cp -R addresses dist",
     "deploy-mumbai": "ts-node scripts/deploy.ts --chainId 80001 && cp -R addresses dist",
     "build": "yarn build:contracts && yarn build:package",
     "prepublishOnly": "yarn build",
@@ -17,7 +17,7 @@
     "typechain": "rm -rf ./typechain && typechain --show-stack-traces --target ethers-v5 --out-dir ./typechain 'artifacts/!(build-info)/**/!(*.dbg*)*.json'",
     "build:contracts": "yarn compile && yarn typechain",
     "build:package": "rm -rf ./dist && tsc && cp typechain/*.d.ts dist/typechain && cp -R addresses dist && cp -R artifacts/contracts dist/artifacts && cp -R contracts dist",
-    "chain": "ganache-cli -h 0.0.0.0 --networkId 50 --accounts 20 -e 10000000000 -l 10000000 -m 'nominee arrange pistol aim book head mind anxiety lobster system forest dose void marine eyebrow'"
+    "chain": "ganache-cli -h 0.0.0.0 --networkId 1337 --accounts 20 -e 10000000000 -l 10000000 -m 'nominee arrange pistol aim book head mind anxiety lobster system forest dose void marine eyebrow'"
   },
   "devDependencies": {
     "@chainlink/contracts": "^0.1.7",
@@ -26,6 +26,7 @@
     "@nomiclabs/hardhat-waffle": "^2.0.1",
     "@openzeppelin/contracts": "^4.1.0",
     "@typechain/ethers-v5": "^7.0.1",
+    "@typechain/hardhat": "^2.1.2",
     "@types/chai": "^4.2.17",
     "@types/chai-as-promised": "^7.1.3",
     "@types/mocha": "^8.2.2",
@@ -45,10 +46,5 @@
     "typechain": "^5.1.1",
     "typescript": "^4.2.4"
   },
-  "dependencies": {
-    "@opengsn/contracts": "^2.2.2",
-    "@opengsn/gsn": "^2.1.0",
-    "@typechain/hardhat": "^2.1.2",
-    "fxportal": "https://github.com/fx-portal/contracts"
-  }
+  "dependencies": {}
 }
