--- a/packages/subgraph/subgraph.yaml
+++ b/packages/subgraph/subgraph.yaml
@@ -4,11 +4,11 @@ schema:
 dataSources:
   - kind: ethereum/contract
     name: InternetCamera
-    network: mumbai
+    network: mainnet
     source:
-      address: '0x36Be4aF57Ec3E545ba354de0E2a19e600dda2c62'
+      address: '0x76eBC5acdAca6d0b2bf960472D40A9ef7B39f6A8'
       abi: InternetCamera
-      startBlock: 15897357
+      startBlock: 0
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.4
@@ -33,7 +33,7 @@ dataSources:
 templates:
   - name: InternetCameraFilm
     kind: ethereum/contract
-    network: mumbai
+    network: mainnet
     source:
       abi: InternetCameraFilm
     mapping:
