--- a/packages/subgraph/subgraph.yaml
+++ b/packages/subgraph/subgraph.yaml
@@ -4,11 +4,11 @@ schema:
 dataSources:
   - kind: ethereum/contract
     name: InternetCamera
-    network: mainnet
+    network: mumbai
     source:
-      address: '0x76eBC5acdAca6d0b2bf960472D40A9ef7B39f6A8'
+      address: '0xB462419B3b8F43EED446416403270Aae97283200'
       abi: InternetCamera
-      startBlock: 0
+      startBlock: 15939023
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.4
@@ -33,7 +33,7 @@ dataSources:
 templates:
   - name: InternetCameraFilm
     kind: ethereum/contract
-    network: mainnet
+    network: mumbai
     source:
       abi: InternetCameraFilm
     mapping:
