--- a/packages/contracts/package.json
+++ b/packages/contracts/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@internetcamera/contracts",
-  "version": "0.0.8",
+  "version": "0.0.9",
   "main": "dist/typechain/index.js",
   "types": "dist/typechain/index.d.ts",
   "files": [
@@ -25,6 +25,7 @@
     "@nomiclabs/hardhat-etherscan": "^2.1.3",
     "@nomiclabs/hardhat-waffle": "^2.0.1",
     "@openzeppelin/contracts": "^4.1.0",
+    "@openzeppelin/contracts-upgradeable": "^4.1.0",
     "@typechain/ethers-v5": "^7.0.1",
     "@typechain/hardhat": "^2.1.2",
     "@types/chai": "^4.2.17",
@@ -46,7 +47,5 @@
     "typechain": "^5.1.1",
     "typescript": "^4.2.4"
   },
-  "dependencies": {
-    "@openzeppelin/contracts-upgradeable": "^4.1.0"
-  }
+  "dependencies": {}
 }
