--- a/packages/subgraph/package.json
+++ b/packages/subgraph/package.json
@@ -12,5 +12,6 @@
   "dependencies": {
     "@graphprotocol/graph-cli": "0.20.1",
     "@graphprotocol/graph-ts": "0.20.0"
-  }
+  },
+  "private": "true"
 }
