--- a/lerna.json
+++ b/lerna.json
@@ -1,5 +1,7 @@
 {
-  "packages": ["packages/*"],
-  "version": "0.0.49",
+  "packages": [
+    "packages/*"
+  ],
+  "version": "0.0.50",
   "npmClient": "yarn"
 }
