--- a/lerna.json
+++ b/lerna.json
@@ -1,7 +1,4 @@
 {
-  "packages": [
-    "packages/*"
-  ],
-  "version": "0.0.59",
-  "npmClient": "yarn"
+  "packages": ["packages/*"],
+  "version": "0.0.59"
 }
