--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -11,10 +11,11 @@
     "@internetcamera/sdk": "^0.0.60",
     "@walletconnect/web3-provider": "^1.5.0",
     "dayjs": "^1.10.6",
-    "ethers": "^5.4.1",
+    "ethers": "^5.4.4",
     "graphql": "^15.5.1",
     "graphql-request": "^3.4.0",
     "next": "^11.0.1",
+    "next-plausible": "^2.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-dropzone": "^11.3.4",
@@ -22,7 +23,6 @@
     "react-icons": "^4.2.0",
     "react-masonry-css": "^1.0.16",
     "swr": "^0.5.6",
-    "use-wallet": "^0.9.0",
     "web3modal": "^1.9.3",
     "zustand": "^3.5.7"
   },
