--- a/packages/react-hooks/package.json
+++ b/packages/react-hooks/package.json
@@ -5,6 +5,7 @@
     "dayjs": "^1.10.6",
     "graphql": "^15.5.1"
   },
+  "private": true,
   "devDependencies": {
     "microbundle": "^0.13.3",
     "typescript": "^4.3.5"
@@ -26,5 +27,6 @@
   },
   "peerDependencies": {
     "react": "^16.0.0"
-  }
+  },
+  "gitHead": "5c6ae572b1cb334b75ec4f33fdd9da3188a04ab6"
 }
