--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -7,14 +7,14 @@
     "start": "next"
   },
   "dependencies": {
-    "@gimmixfactory/use-wallet": "^0.0.24",
+    "@gimmixorg/use-wallet": "^0.0.28",
     "@internetcamera/sdk": "^0.0.70",
     "@walletconnect/web3-provider": "^1.6.0",
     "dayjs": "^1.10.6",
     "ethers": "^5.4.4",
-    "graphql": "^15.5.1",
+    "graphql": "^16.0.1",
     "graphql-request": "^3.4.0",
-    "next": "^11.0.1",
+    "next": "^12.0.2",
     "next-plausible": "^2.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -22,7 +22,7 @@
     "react-fast-marquee": "^1.2.1",
     "react-icons": "^4.2.0",
     "react-masonry-css": "^1.0.16",
-    "swr": "^0.5.6",
+    "swr": "^1.0.1",
     "web3modal": "^1.9.3",
     "zustand": "^3.5.7"
   },
