--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -24,7 +24,7 @@
     "react-masonry-css": "^1.0.16",
     "swr": "^1.0.1",
     "web3modal": "^1.9.3",
-    "zustand": "^3.5.7"
+    "zustand": "3.6.2"
   },
   "devDependencies": {
     "@types/node": "^16.3.3",
